--- a/thesis/paper/sections/7_discussion/futureWork.tex
+++ b/thesis/paper/sections/7_discussion/futureWork.tex
@@ -2,15 +2,16 @@
 
 \section{Future Work} \label{futureWork}
 
+discussion:
+- problem statement problems (how much I achieved)
 - limitations
 
+future work:
+- limitations to fix
 - more intertext clients
 - more themes
 - user-made themes
-
 - refined control on persisted storage (expiration dates)
 - cross-origin storage read
-
 - media queries
-
 - permission flow for requests (requests outside same origin, images loaded from remote)
